--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dashboard-de-reservas",
+  "name": "dashboard-de-reservas-venetur",
   "private": true,
   "version": "0.0.0",
   "type": "module",
